samples/_failures_safe/1761799441_ea5859_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1062a6d9.c: In function ‘main’:
./samples/SAFE/__tmp_1062a6d9.c:134:16: error: missing terminating " character
  134 |         printf("Error:
      |                ^~~~~~~
./samples/SAFE/__tmp_1062a6d9.c:134:9: error: expected expression at end of input
  134 |         printf("Error:
      |         ^~~~~~
./samples/SAFE/__tmp_1062a6d9.c:134:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1062a6d9.c:134:9: error: expected declaration or statement at end of input
